# iracing-mcp-server

./: .env  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  cloudflared-downloads.html  cloudflared.err  example_usage.py  mcp-config-example.md  pyproject.toml  requirements.txt  test_mcp_client.py
docs/: elevenlabs-client-events.md
iracing_mcp_server/: __init__.py  elevenlabs_client.py  iracing_data.py  server.py
tests/: test_event_broadcaster.py  test_iracing_data.py  test_server.py
